# Controle_robo_web

./: .gitignore  AUDITORIA_2026-05-14.md  AUDITORIA_2026-05-18.md  AUDITORIA_2026-05-26.md  AUDITORIA_2026-05-27.md  AUDITORIA_2026-05-29.md  AUDITORIA_2026-05-29b.md  AUDITORIA_2026-06-11.md  AUDITORIA_2026-07-07.md  CONEXOES.txt  ESTADO_PROJETO.md  PLANO_HEADLESS_2026-05-22.md  PROVA_MPU6500_NAO_9250.md  README.md  dados_testes_flow_pmw3901.txt  install_nav2.sh  launch.sh  pair-ps4.sh  setup.sh  setup_pi.sh  setup_udev.sh  start.sh  test_lidar.sh
controle_web/: README.md  app.py  camera_bridge.py  door_geom.py  (+17 more)
ros2_packages/robot_nav/: package.xml  setup.py
ros2_packages/robot_nav/behavior_trees/: navigate_w_backup_first_recovery.xml
ros2_packages/robot_nav/config/: nav2_params.yaml  nav2_params_legacy.yaml  nav2_params_pi.yaml  teleop_ps4.yaml  twist_mux.yaml  twist_mux_auto.yaml
ros2_packages/robot_nav/launch/: lidar.launch.py  nav2.launch.py  robot.launch.py  sim.launch.py  slam.launch.py  trekking.launch.py
ros2_packages/robot_nav/robot_nav/: cmd_vel_to_wheels.py  cone_detector.py  cone_pose_fix.py  door_crossing.py  freeze_capture.py  fused_odom.py  mega_bridge.py  motion_guard.py  odom_publisher.py  path_follower.py  person_follower.py  pose_estimator.py  scan_sanitizer.py  sim_actuator_model.py  trekking_runner.py  unstuck_supervisor.py  utils.py
ros2_packages/robot_nav/rviz/: ld06_test.rviz
ros2_packages/robot_nav/scripts/: arc_calib.py  spin_calib.py
ros2_packages/robot_nav/test/: test_cone_pose_fix.py  test_door_crossing.py  test_fused_odom.py  test_motion_guard.py  test_path_follower.py  test_person_follower.py  test_scan_sanitizer.py  test_sim_actuator_model.py  test_unstuck_supervisor.py
ros2_packages/robot_nav/tools/: flow_check.py  imu_check.py
ros2_packages/robot_nav/urdf/: husky.sdf  husky.urdf.xacro  robot.urdf.xacro  sim_robot.sdf  sim_robot.urdf.xacro
(+101 files in other folders)
